feat: support the Pine64 SOQuartz CM4 module An RK3566-based compute module in the RPi CM4 form factor
Signed-off-by: Tom Plant <tom@tplant.com.au>

--- a/profiles/pkg.yaml
+++ b/profiles/pkg.yaml
@@ -15,3 +15,5 @@ finalize:
     to: /rootfs/profiles
   - from: /pkg/rock4se
     to: /rootfs/profiles
+  - from: /pkg/soquartz-cm4
+    to: /rootfs/profiles
