--- a/installers/pkg.yaml
+++ b/installers/pkg.yaml
@@ -8,11 +8,9 @@ dependencies:
   - stage: rockpi4
   - stage: rockpi4c
   - stage: rock4cplus
-<<<<<<< HEAD
   - stage: rock4se
-=======
   - stage: soquartz-cm4
->>>>>>> cc64454 (feat: support the Pine64 SOQuartz CM4 module)
+  - stage: turing-rk1
   - stage: profiles
   - stage: u-boot-nanopi-r4s
     platform: linux/arm64
@@ -29,6 +27,8 @@ dependencies:
   - stage: u-boot-rock4se
     platform: linux/arm64
   - stage: u-boot-soquartz-cm4
+    platform: linux/arm64
+  - stage: u-boot-turing-rk1
     platform: linux/arm64
   - image: "{{ .BUILD_ARG_PKGS_PREFIX }}/kernel:{{ .BUILD_ARG_PKGS }}"
     platform: linux/arm64
@@ -59,8 +59,13 @@ dependencies:
     from: /dtb/rockchip/rk3399-rock-4se.dtb
     to: /rootfs/artifacts/arm64/dtb/rockchip/rk3399-rock-4se.dtb
   - image: "{{ .BUILD_ARG_PKGS_PREFIX }}/kernel:{{ .BUILD_ARG_PKGS }}"
+    platform: linux/arm64
     from: /dtb/rockchip/rk3566-soquartz-cm4.dtb
     to: /rootfs/artifacts/arm64/dtb/rockchip/rk3566-soquartz-cm4.dtb
+  - image: "{{ .BUILD_ARG_PKGS_PREFIX }}/kernel:{{ .BUILD_ARG_PKGS }}"
+    platform: linux/arm64
+    from: /dtb/rockchip/rk3588-turing-rk1.dtb
+    to: /rootfs/artifacts/arm64/dtb/rockchip/rk3588-turing-rk1.dtb
 finalize:
   - from: /rootfs
     to: /
