--- a/artifacts/soquartz-cm4/pkg.yaml
+++ b/artifacts/soquartz-cm4/pkg.yaml
@@ -22,9 +22,11 @@ steps:
           && ln -sf /toolchain/bin/env /usr/bin/env \
           && ln -sf /toolchain/bin/python3 /toolchain/bin/python
 
-        pip3 install pyelftools
+        pip3 install pyelftools setuptools
 
         tar xf u-boot.tar.bz2 --strip-components=1
+
+        patch -p1 < /pkg/patches/uboot-byteorder.patch
       - |
         make soquartz-cm4-rk3566_defconfig
     # use binary firmware, pending ATF support
