--- a/artifacts/turing-rk1/pkg.yaml
+++ b/artifacts/turing-rk1/pkg.yaml
@@ -21,8 +21,9 @@ steps:
         mkdir -p /usr/bin \
           && ln -sf /toolchain/bin/env /usr/bin/env \
           && ln -sf /toolchain/bin/python3 /toolchain/bin/python
-        pip3 install pyelftools
+        pip3 install pyelftools setuptools
         tar xf u-boot.tar.bz2 --strip-components=1
+        patch -p1 < /pkg/patches/uboot-byteorder.patch
       - |
         make turing-rk1-rk3588_defconfig
     # use binary firmware, pending ATF support
